--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
     <!-- Page Content -->
 
 
-    <a  name="PCR Machine"></a>
+    <a  name="Lightsheet Microscope"></a>
 	<div class="content-section-b">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/PCR/pcr.html"> <h2 class="section-heading">PCR Machine</h2> </a>
-                    <p class="lead">Designed and built a PCR machine.</p>
+                    <a href="pages/LIGHTSHEET/lightsheet.html"> <h2 class="section-heading">Lightsheet Microscope</h2> </a>
+                    <p class="lead">Designed and built a lightsheet microscope system.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="pages/PCR/images/board_.png" alt="">
+                    <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -110,19 +110,18 @@
 	</div>
 
 
-
-    <a  name="lightsheet"></a>
+    <a  name="PCR Machine"></a>
 	<div class="content-section-b">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/LIGHTSHEET/lightsheet.html"> <h2 class="section-heading">Lightsheet Microscope</h2> </a>
-                    <p class="lead">Designed and built a lightsheet microscope system.</p>
+                    <a href="pages/PCR/pcr.html"> <h2 class="section-heading">PCR Machine</h2> </a>
+                    <p class="lead">Designed and built a PCR machine.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
+                    <img class="img-responsive" src="pages/PCR/images/board_.png" alt="">
                 </div>
             </div>
         </div>
