--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/MEDIA_PLAYER/mediaplayer.html"> <h2 class="section-heading">Android Media Player</h2> </a>
-                    <p class="lead">Built a media player app for Android. The app uses the LastFM API to fill in details like album art, artist info, etc."></p>
+                    <p class="lead">Built a media player app for Android. The app uses the LastFM API to fill in details like album art, artist info, etc.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                         <img class="img-responsive" src="img/mediaplayer.png" alt="">
