--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 
+
 <body>
 
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
@@ -99,7 +100,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/SEAHORSE_PLATFORM/seahorse.html"> <h2 class="section-heading">Clinical Trial Data Platform</h2> </a>
+                    <a href="pages/SEAHORSE_PLATFORM/seahorse.html"> <h2 class="section-heading">Healthcare Data Platform</h2> </a>
                     <p class="lead">Hired and led a team to design and build a cloud data platform for multiple clinical trials centers.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -109,19 +110,18 @@
         </div>
 	</div>
 
-
-    <a  name="PCR Machine"></a>
+    <a  name="neuralnetwork"></a>
 	<div class="content-section-b">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/PCR/pcr.html"> <h2 class="section-heading">PCR Machine</h2> </a>
-                    <p class="lead">Designed and built a PCR machine.</p>
+                    <a href="pages/NEURAL_NET/neural_net.html"> <h2 class="section-heading">Neural Net: <br>Gradient Descent for Supervised Machine Leaarning</h2> </a>
+                    <p class="lead">Implemented a neural network from scratch using only the C++ standard library. I was able to train my network on the MNIST dataset and score 98% digit classification accuracy.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="pages/PCR/images/board_.png" alt="">
+                    <img class="img-responsive" src="img/neuralnet.png" alt="">
                 </div>
             </div>
         </div>
@@ -220,19 +220,18 @@
     </div>
 
 
-
-	<a  name="neuralnetwork"></a>
+    <a  name="qPCR Machine"></a>
 	<div class="content-section-b">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/NEURAL_NET/neural_net.html"> <h2 class="section-heading"> Neural Network: <br>Gradient Descent for Supervised Machine Learning</h2> </a>
-                    <p class="lead">Implemented a neural network from scratch using only the C++ standard library. I was able to train my network on the MNIST dataset and score 98% digit classification accuracy.</p>
+                    <a href="pages/PCR/pcr.html"> <h2 class="section-heading">qPCR Machine</h2> </a>
+                    <p class="lead">Designed and built a qPCR machine with integrated DNA purification.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/neuralnet.png" alt="">
+                    <img class="img-responsive" src="pages/PCR/images/board_.png" alt="">
                 </div>
             </div>
         </div>
