--- a/pages/SEAHORSE_PLATFORM/seahorse.html
+++ b/pages/SEAHORSE_PLATFORM/seahorse.html
@@ -89,64 +89,43 @@
 
         
         <div class="container">
-            <h3>Project Description</h3>
-            <p>This project was about building the infrastructure needed to automate and optimize a healthcare business. The company runs clinical trials 
-                for most of the major pharmaceutical companies in the world. At any one time, the company has 15-30 trials running concurrently. 
-                They've been around a while and have healthy financials, but everything was still running on paper, Excel, and a very dated SaaS system. This 
-                meant there was a lot of room for efficiency gains. They're also in the process of expanding and needed a system that could scale with them.</p>
+            <h3>Project Overview</h3>
+            <p>This project involved building a scalable, cloud-based platform to modernize and optimize clinical trial operations for a healthcare company. The goal was to replace outdated systems with automated workflows, high-quality data management, and advanced analytics, ensuring compliance with regulations like PHIPA, PIPEDA, and Law 25.</p>
             
-            <h3>High-Level Goals:</h3>
+            <h3>Key Objectives</h3>
             <ul>
-                <li>Discover, define, and automate as many workflows as possible.</li>
-                <li>Digitize as much data as possible.</li>
-                <li>Elevate the quality of data within the organization 
-                    <ul>
-                        <li>Detect and correct existing errors.</li>
-                        <li>Guard datasets against new errors.</li>
-                        <li>Define a data model that fits the organization's workflows and restructure existing data to fit the new data model.</li>
-                        <li>Provide high-quality interfaces for querying datasets (Frontend GUIs for humans and APIs for software).</li>
-                    </ul>
-                </li>
-                <li>Get data and processes into the cloud securely and in compliance with PHIPA, PIPEDA, and Law 25.</li>
-                <li>Make frequent audits faster and easier to pass by:
-                    <ul>
-                        <li>Streamlining user management and access controls.</li>
-                        <li>Aggregating data into fewer locations.</li>
-                        <li>Defining digital infrastructure and processes as code.</li>
-                    </ul>
-                </li>
-                <li>Build a system that can scale to thousands of employees and hundreds of thousands of patients.</li>
-                <li>Build a system capable of accurate, real-time analytics.</li>
-                <li>Experiment with A.I tools like multi-modal LLMs, text-to-speech, speech-to-text, computer vision, etc., to try and build useful features.</li>
-                <li>Use automation to reduce operating cost while increasing revenue.</li>
-                <li>Use automation to improve patient experience and deliver a better product to customers (patients and pharmaceutical companies).</li>
-            </ul>
-            <h3>My Role:</h3>
-            <ul>
-                <li>Hire and lead team of 5 developers.</li>
-                <li>Design and implement dev + production cloud infrastructure using Terraaform, AWS and Kubernetes.</li>
-                <li>Build CI/CD pipelines using GitHub Actions.</li>
-                <li>Design ERD in DBeaver and then implement data model in Django.</li>
-                <li>Integrate with 3rd party clinical trials platform (CRIO) using their API.</li>
-                <li>Explore and experiment with various A.I tools (OpenAI API, langchain, AWS A.I functions, various other tools) </li>
-                <li>Propose, negotiate and oversee cybersecurity and regulatory audit by 3rd party company (PacketLabs in Toronto).</li>
-                <li>Earn buy-in across the organization by delivering results and advocating for our work using effective communication.</li>
-                <li>Motivate the team and get them the resources they need.</li>
+            <li>Automate workflows and digitize data.</li>
+            <li>Enhance data quality and implement robust error detection.</li>
+            <li>Build secure, compliant cloud infrastructure.</li>
+            <li>Streamline audits and access controls.</li>
+            <li>Enable real-time analytics and scalability for future growth.</li>
+            <li>Leverage AI tools to improve efficiency and patient experience.</li>
             </ul>
 
-            <h3>Technology Stack:</h3>
+            <h3>My Contributions</h3>
             <ul>
-                <li>Python</li>
-                <li>AWS</li>
-                <li>K8s</li>
-                <li>Docker</li>
-                <li>Terraform</li>
-                <li>Django Rest Framework</li>
-                <li>PostgreSQL</li>
-                <li>React</li>
-                <li>OpenAI API</li>
-                <li>CRIO API</li>
+            <li>Led a team of 5 developers to deliver the platform.</li>
+            <li>Designed and deployed cloud infrastructure using AWS, Kubernetes, and Terraform.</li>
+            <li>Built CI/CD pipelines to test, build and deploy to multiple environments.</li>
+            <li>Developed a robust data model and implemented it in Django+Postgres</li>
+            <li>Explored LLMs and agentic A.I system using Langgraph..</li>
+            <li>Oversaw cybersecurity audits and ensured regulatory compliance.</li>
             </ul>
+
+            <h3>Technology Stack</h3>
+            <ul>
+            <li>Python</li>
+            <li>Django Rest Framework</li>
+            <li>AWS</li>
+            <li>Kubernetes</li>
+            <li>Terraform</li>
+            <li>PostgreSQL</li>
+            <li>React</li>
+            <li>Docker</li>
+            <li>OpenAI API</li>
+            <li>Langgraph</li>
+            </ul>
+        </div>
 
 
 
