update some text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#PCR Machine">Projects</a>
+                        <a href="#Lightsheet Microscope">Projects</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -128,19 +128,18 @@
 	</div>
 
 
-
-    <a  name="surgerybot"></a>
+    <a  name="hackhealth"></a>
 	<div class="content-section-a">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/CAT_ROBOT/cat_robot.html"> <h2 class="section-heading"> Rodent Surgery Robot</h2> </a>
-                    <p class="lead">Designed and built a robot for automating craniotomies on research rodents.</p>
+                    <a href="pages/HACKHEALTH/hackhealth.html"> <h2 class="section-heading">Hacking Health</h2> </a>
+                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health event at Shopify's Ottawa office.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="pages/CAT_ROBOT/images/285183684_581245230191818_738763148605609657_n.jpg" alt="">
+                    <img class="img-responsive" src="img/hackhealth.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -148,18 +147,19 @@
 
 
 
-    <a  name="hackhealth"></a>
+    <a  name="surgerybot"></a>
 	<div class="content-section-b">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/HACKHEALTH/hackhealth.html"> <h2 class="section-heading">Hacking Health</h2> </a>
-                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health event at Shopify's Ottawa office.</p>
+                    <a href="pages/CAT_ROBOT/cat_robot.html"> <h2 class="section-heading"> Rodent Surgery Robot</h2> </a>
+                    <p class="lead">Designed and built a robot for automating craniotomies on research rodents.</p>
+
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/hackhealth.jpg" alt="">
+                    <img class="img-responsive" src="pages/CAT_ROBOT/images/285183684_581245230191818_738763148605609657_n.jpg" alt="">
                 </div>
             </div>
         </div>
