--- a/pages/LIGHTSHEET/lightsheet.html
+++ b/pages/LIGHTSHEET/lightsheet.html
@@ -223,9 +223,9 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-            <h1 class="page-header">Lightsheet Microscope: <a href="https://github.com/JulianPitney/Lightsheet/blob/master/README.md">GitHub README </a>
-                    <small></small>
-                </h1>
+            <h1 class="page-header">Lightsheet Microscope
+                <small>3D Imaging of Whole-Brain Vasculature Network</small>
+            </h1>
             </div>
         </div>
         <!-- /.row -->
