--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/LIGHTSHEET/lightsheet.html"> <h2 class="section-heading">Lightsheet Microscope</h2> </a>
-                    <p class="lead">Designed and built a lightsheet microscope system.</p>
+                    <p class="lead">Designed and built a lightsheet microscope system for 3D imaging of whole-brain vasculature networks in research rodents.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
@@ -101,7 +101,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/SEAHORSE_PLATFORM/seahorse.html"> <h2 class="section-heading">Healthcare Data Platform</h2> </a>
-                    <p class="lead">Hired and led a team to design and build a cloud data platform for multiple clinical trials centers.</p>
+                    <p class="lead">Built and led a high-performing team to deliver a scalable cloud data platform supporting multiple clinical trial centers.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                         <img class="img-responsive" src="pages/SEAHORSE_PLATFORM/images/homepage.png" alt="">
@@ -118,7 +118,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/NEURAL_NET/neural_net.html"> <h2 class="section-heading">Neural Net: <br>Gradient Descent for Supervised Machine Leaarning</h2> </a>
-                    <p class="lead">Implemented a neural network from scratch using only the C++ standard library. I was able to train my network on the MNIST dataset and score 98% digit classification accuracy.</p>
+                    <p class="lead">Developed a neural network from scratch in C++ using only the standard library, achieving 98% accuracy on MNIST digit classification.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/neuralnet.png" alt="">
@@ -136,7 +136,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/HACKHEALTH/hackhealth.html"> <h2 class="section-heading">Hacking Health</h2> </a>
-                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health event at Shopify's Ottawa office.</p>
+                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health hackathon hosted at Shopify’s Ottawa office.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/hackhealth.jpg" alt="">
@@ -155,7 +155,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/CAT_ROBOT/cat_robot.html"> <h2 class="section-heading"> Rodent Surgery Robot</h2> </a>
-                    <p class="lead">Designed and built a robot for automating craniotomies on research rodents.</p>
+                    <p class="lead">Designed and built a robotic system to automate craniotomies in research rodents.</p>
 
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
@@ -174,7 +174,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="https://github.com/JulianPitney/3D-Kinematics"> <h2 class="section-heading">3D Kinematics Box</h2> </a>
-                    <p class="lead">Designed and built a markerless, 360°, hardware synchronized 3D pose estimation system.</p>
+                    <p class="lead">Designed and built a markerless, 360° hardware-synchronized system for 3D pose estimation.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                         <img class="img-responsive" src="img/kinbox.jpg" alt="">
@@ -192,7 +192,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="https://github.com/JulianPitney/HomeCageSinglePellet"> <h2 class="section-heading"> Automated Single Pellet</h2> </a>
-                    <p class="lead">Designed and built a system that hosts up to 5 mice in their home environment and automatically administers the single pellet reaching task. The system collects a variety of data including RFID, raw video and the results of computer vision analyses.</p>
+                    <p class="lead">Designed and built an automated system to house up to five mice in their home environment while administering the single pellet reaching task. The system captures multimodal data, including RFID, raw video, and computer vision-based behavioral analyses.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/reach.gif" alt="">
@@ -210,7 +210,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="pages/SURVEILLANCE_PROJ/surveillance_proj.html"> <h2 class="section-heading"> Automated Video Surveillance: <br>OpenCV + Raspberry Pi </h2> </a>
-                    <p class="lead">Designed and built a surveillance camera using OpenCV and an RPi.</p>
+                    <p class="lead">Designed and built a surveillance camera system using OpenCV and a Raspberry Pi.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/finish_camera.jpg" alt="">
@@ -248,7 +248,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="pages/PUBLICATIONS/publications.html"> <h2 class="section-heading">Research Publications</h2> </a>
-                    <p class="lead">Worked on several research projects in the Department of Cellular and Molecular Medicine at UOttawa. Some of these projects are associated with published papers for which I am one of the listed authors.</p>
+                    <p class="lead">Contributed to multiple research projects in the Department of Cellular and Molecular Medicine at the University of Ottawa. Some of these resulted in publications on which I am a co-author.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="pages/PUBLICATIONS/images/research_logo_dalle3.png" alt="">
@@ -265,7 +265,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/MEDIA_PLAYER/mediaplayer.html"> <h2 class="section-heading">Android Media Player</h2> </a>
-                    <p class="lead">Built a media player app for Android. The app uses the LastFM API to fill in details like album art, artist info, etc.</p>
+                    <p class="lead">Developed a media player app for Android that integrates with the Last.fm API to dynamically display album art, artist information, and related metadata.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                         <img class="img-responsive" src="img/mediaplayer.png" alt="">
