--- a/pages/LED_CUBE/led_cube.html
+++ b/pages/LED_CUBE/led_cube.html
@@ -78,13 +78,7 @@
 
 
                 <h3>Project Description</h3>
-				<p>I did my own build of the open source design from <a href="https://www.instructables.com/Led-Cube-8x8x8/">this</a> instructable.
-        I did the whole thing on a large prototype board and my soldering work was absolutely awful. I also split my ribbon cables into
-        individual wires for some reason??? So it's just a mess. The thing turned on and I was able to make some pretty lights dance a bit
-        but unsurprisingly the board wasn't stable and it didn't work perfectly. I'm assuming there are some shorts or grounding issues
-        somewhere in that mess. On the bright side, I learned how a demux works and built my own from ICs. The demultiplexer actually worked
-        perfectly so that was nice. If I ever redo this project I'll just CAD everything up in Eagle and have a much more compact and reliable
-        board made, and then solder my components onto that board. </p>
+				<p>Built my own version of this 8x8x8 LED cube on a large prototype board. The soldering was rough, and for some reason, I split the ribbon cables into individual wires—so it was a bit of a mess. It lit up and I got some animations working, but the board was unstable (probably due to shorts or grounding issues). On the bright side, I built a working demultiplexer from ICs and finally understood how they work. If I ever revisit the project, I'll design a proper PCB in Eagle for a cleaner, more reliable build.</p>
         <br>
 
         <div class="col-lg-7">
