--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
 <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        <div class="container topnav">
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -29,12 +31,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Julian Pitney</a>
+                <a class="navbar-brand" href="#"></a>
             </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav">
                     <li>
-                        <a href="#about">About</a>
+                        <a href="#about">Home</a>
                     </li>
                     <li>
                         <a href="#Lightsheet Microscope">Projects</a>
@@ -44,31 +47,37 @@
                     </li>
                 </ul>
             </div>
+            <!-- /.navbar-collapse -->
         </div>
+        <!-- /.container -->
     </nav>
 
 
     <a name="about"></a>
     <div class="intro-header">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Portfolio</h1>
-                        <h2> Julian Pitney </h2>
+                        <div class="intro-bio">
+                            <p>Hi! I'm Julian. I'm a software engineer and maker with over 10 years of full-stack experience, from cloud infrastructure 
+                            right down to hardware. I'm a lifelong science and technology nerd and I'm passionate about building 
+                            things that will help more humans live better lives. I have a deep desire to surround myself with smart people who want to work hard. 
+                            I'm hungry to learn, grow and build. I'm constantly learning and working on projects 
+                            both personal and professional. If you scroll below, you'll see some of the things I've built :)</p>
+                        </div>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
                                 <a target="_blank" href="https://github.com/JulianPitney" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
-
         </div>
         <!-- /.container -->
-
     </div>
     <!-- /.intro-header -->
 
@@ -136,7 +145,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/HACKHEALTH/hackhealth.html"> <h2 class="section-heading">Hacking Health</h2> </a>
-                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health hackathon hosted at Shopify’s Ottawa office.</p>
+                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health hackathon hosted at Shopify's Ottawa office.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/hackhealth.jpg" alt="">
@@ -155,8 +164,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/CAT_ROBOT/cat_robot.html"> <h2 class="section-heading"> Rodent Surgery Robot</h2> </a>
-                    <p class="lead">Designed and built a robotic system to automate craniotomies in research rodents.</p>
-
+                    <p class="lead"><b>WARNING: Graphic pictures of deceased rats.</b> Designed and built a robotic system to automate craniotomies on research rodents.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="pages/CAT_ROBOT/images/285183684_581245230191818_738763148605609657_n.jpg" alt="">
@@ -345,18 +353,11 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-12 text-center">
 					<h1> Contact Information</h1>
                     <h2> Julian Pitney</h2>
 					<h3> Phone: (1) 905-431-0992</h3>
 					<h4> Email: julianpitney@gmail.com</h4>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a target="_blank" href="https://github.com/JulianPitney" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                    </ul>
                 </div>
             </div>
 
@@ -365,34 +366,6 @@
 
     </div>
     <!-- /.banner -->
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#PCR Machine">Projects</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted small"></p>
-                </div>
-            </div>
-        </div>
-    </footer>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
