--- a/pages/MEDIA_PLAYER/mediaplayer.html
+++ b/pages/MEDIA_PLAYER/mediaplayer.html
@@ -66,7 +66,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Android Media Player
+                <h1 class="page-header"><b>Sound Warning: sudden loud music</b>
                     <small></small>
                 </h1>
             </div>
