--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                     <div class="intro-message">
                         <h1>Portfolio</h1>
                         <div class="intro-bio">
-                            <p>Hi! I'm Julian. I'm a software engineer and maker with over 10 years of full-stack experience, from cloud infrastructure 
-                            right down to hardware. I'm a lifelong science and technology nerd and I'm passionate about building 
+                            <p>Hi! I'm Julian. I'm a software engineer and maker with over 10 years of experience building solutions to complex problems. I'm a lifelong science and technology nerd and I'm passionate about building 
                             things that will help more humans live better lives. I have a deep desire to surround myself with smart people who want to work hard. 
                             I'm hungry to learn, grow and build. I'm constantly learning and working on projects 
                             both personal and professional. If you scroll below, you'll see some of the things I've built :)</p>
